Subdir host working

--- a/src/HtmlGenerator/Web/header.html
+++ b/src/HtmlGenerator/Web/header.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>Header</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <script src="scripts.js"></script>
 </head>
 <body class="headerBody" onload="onHeaderLoad();">
     <span id="searchBoxAndImages">
-        <img id="dotnetLogo" src="content/icons/dotnet.png" width="38" height="38" role="presentation" />
+        <img id="dotnetLogo" src="/content/icons/dotnet.png" width="38" height="38" role="presentation" />
         <input type="text"
                name="name"
                maxlength="260"
