--- a/src/HtmlGenerator/Web/documentoutline.html
+++ b/src/HtmlGenerator/Web/documentoutline.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Document Outline</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <script src="scripts.js"></script>
 </head>
 <body onload="onDocumentOutlineLoad();">
