--- a/src/SourceIndexServer/wwwroot/documentoutline.html
+++ b/src/SourceIndexServer/wwwroot/documentoutline.html
@@ -3,7 +3,7 @@
 <head>
     <title>Document Outline</title>
     <link rel="stylesheet" href="/styles.css" />
-    <script src="scripts.js"></script>
+    <script src="/scripts.js"></script>
 </head>
 <body onload="onDocumentOutlineLoad();">
     <div class="tabChannel"><span class="activeTab">Outline</span></div>
