--- a/src/SourceIndexServer/wwwroot/header.html
+++ b/src/SourceIndexServer/wwwroot/header.html
@@ -3,7 +3,7 @@
 <head>
     <title>Header</title>
     <link rel="stylesheet" href="/styles.css" />
-    <script src="scripts.js"></script>
+    <script src="/scripts.js"></script>
 </head>
 <body class="headerBody" onload="onHeaderLoad();">
     <span id="searchBoxAndImages">
