--- a/src/SourceIndexServer/wwwroot/index.html
+++ b/src/SourceIndexServer/wwwroot/index.html
@@ -5,7 +5,7 @@
     <title>Source Browser</title>
     <link rel="search" type="application/opensearchdescription+xml" href="opensearch" title="Source Browser">
     <link rel="stylesheet" href="/styles.css">
-    <script src="scripts.js"></script>
+    <script src="/scripts.js"></script>
 </head>
 <frameset rows="58,*"
           border="0"
