--- a/src/SourceIndexServer/wwwroot/overview.html
+++ b/src/SourceIndexServer/wwwroot/overview.html
@@ -3,7 +3,7 @@
 <head>
     <title>Overview</title>
     <link rel="stylesheet" href="/styles.css" />
-    <script src="scripts.js"></script>
+    <script src="/scripts.js"></script>
 </head>
 <body>
     <h1>.NET Source Browser</h1>
